fixed package.json and spacings

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -90,6 +90,10 @@ footer span a{
     margin-left: 4.5rem;
     margin-bottom: 20rem;
 }
+
+.row.top{
+    align-items: flex-start;
+}
 @media    (max-width: 600px) {
     .row > .col-2{
         width: 50%;
@@ -204,8 +208,8 @@ img.image__small{
 }
 
 /* cart */
- cart-item{
-     min-width: 30rem;
+ .cart-item{
+     min-width: 20rem;
  }
 
  /* sign in*/
